Added placeholder and added files from webstorm

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   </a>
                 </div>
                 <div class="Header-item">
-                  <input type="search" class="form-control Header-input" />
+                  <input type="search" placeholder="This doesn't work..." class="form-control Header-input" />
                 </div>
                 <div class="Header-item Header-item--full">
                   Menu
