--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="Layout">
             <div class="Layout-main p-2">
-              .Layout-main
+              Content goes here
             </div>
           
             <div class="Layout-sidebar p-2">
