Created link to projects page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="Layout-sidebar p-2">
                 <nav class="SideNav border" style="max-width: 360px">
                     <a class="SideNav-item" href="/index.html" aria-current="page">Will</a>
-                    <a class="SideNav-item" href="#url">Projects</a>
+                    <a class="SideNav-item" href="/projects.html">Projects</a>
                     <a class="SideNav-item" href="#url">Interests</a>
                     <a class="SideNav-item" href="#url">About</a>
                   </nav>
