Added image and area about me!

--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
 
         <div class="Layout">
             <div class="Layout-main p-2">
-              Content goes here
+                <div class="Subhead">
+                    <div class="Subhead-heading">Hello World!</div>
+                    <div class="Subhead-description">Welcome to my website!</div>
+                </div>
+                <div class="d-table col-12">
+                    <div class="col-3 d-table-cell v-align-middle">
+                        <img class="width-full avatar" src="images/me.jpg" alt="github" />
+                    </div>
+                    <div class="col-10 d-table-cell v-align-middle pl-4">
+                        <h1 class="text-normal lh-condensed">William Burton</h1>
+                        <p class="h4 color-fg-muted text-normal mb-2">So your probably wondering what your doing here? Good question; Well your reading about this guy who develops software!</p>
+                        <a class="color-fg-muted text-small" href="https://www.github.com/WillTheDeveloper">Will@Github</a>
+                    </div>
+                </div>
             </div>
           
             <div class="Layout-sidebar p-2">
