Updated nav stufffffff

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <nav class="SideNav border" style="max-width: 360px">
                     <a class="SideNav-item" href="/index.html" aria-current="page">Will</a>
                     <a class="SideNav-item" href="/projects.html">Projects</a>
-                    <a class="SideNav-item" href="#url">Interests</a>
-                    <a class="SideNav-item" href="#url">About</a>
+                    <a class="SideNav-item" href="#url">Interests (Coming soon)</a>
+                    <a class="SideNav-item" href="#url">About (Coming soon)</a>
                   </nav>
             </div>
           </div>
