--- a/interests.html
+++ b/interests.html
@@ -30,7 +30,7 @@
     <div class="blankslate">
         <img src="https://ghicons.github.com/assets/images/blue/png/Pull%20request.png" alt="" class="mb-3" />
         <h3 class="mb-1">Coming soon!</h3>
-        <p>This page is not quite done. If you think this is a issue then please create a new issue on GitHub following the green button below! Thanks!</p>
+        <p>This page is not quite done. If you think this is an issue then please create a new issue on GitHub following the green button below! Thanks!</p>
         <a class="btn btn-primary my-3" href="https://www.github.com/WillTheDeveloper/SimpleDevelopersPortfolio/issues" type="button">Report issue</a>
         <p><a class="btn-link" href="index.html" type="button">Go back home</a></p>
     </div>
